# darya-website

./: Cargo.toml  README.md  build.sh  go.mod  server.go
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/cmd/: run.sh
public/: index.html
public/err/: 403.htm
public/style/: font.css
src/backend/: go.mod  main.go
src/backend/server/: server.go
src/public/: index.html
src/public/style/: font.css  styles.css
src/public/view/err/: 404.html
