[package]
name = "darya-website"
authors = ["Felipe S.C. Lorentz <113468900+SCLorentz@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3.69"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[lib]
crate-type = ["cdylib"]
name = "wasm"                           # The name of the target
path = "src/backend/build/lib.rs"       # The source file of the target